added a readme to describe the project

--- a/readme.me
+++ b/readme.me
@@ -1,8 +1,8 @@
-## Tandish Automated Job Search & Application System
+## Automated Job Search & Application System
 
-Tandish is a comprehensive desktop application designed to streamline and automate your job search and application process. With Tandish, you can search for jobs across multiple platforms—including Indeed, Glassdoor, CareerBuilder, Google Jobs, BrighterMonday, Remote OK, and We Work Remotely—using advanced web scraping powered by Selenium.
+AutoJob is a comprehensive desktop application designed to streamline and automate your job search and application process. With AutoJob, you can search for jobs across multiple platforms—including Indeed, Glassdoor, CareerBuilder, Google Jobs, BrighterMonday, Remote OK, and We Work Remotely—using advanced web scraping powered by Selenium.
 
-The application allows you to upload your CV, from which it intelligently extracts relevant skills and experience. Using a free language model, Tandish summarizes your experience and customizes each job application email to match the requirements of the position. You can manage job listings in a searchable database, generate personalized emails with attachments (such as your CV and cover letter), and track the status of each application from a user-friendly interface.
+The application allows you to upload your CV, from which it intelligently extracts relevant skills and experience. Using a free language model, AutoJob summarizes your experience and customizes each job application email to match the requirements of the position. You can manage job listings in a searchable database, generate personalized emails with attachments (such as your CV and cover letter), and track the status of each application from a user-friendly interface.
 
 Key features include:
 - Automated job search across multiple job boards
@@ -12,4 +12,4 @@ Key features include:
 - Secure email sending via SMTP with configurable settings
 - Easy-to-use graphical interface built with Tkinter
 
-Tandish helps you save time, improve your application quality, and stay organized
+AutoJob helps you save time, improve your application quality, and stay organized
